fix: de-pluralize relation type w/ single; fix flex wrap; clickable sibling parent

--- a/client/components/PubEdge/pubEdge.scss
+++ b/client/components/PubEdge/pubEdge.scss
@@ -39,7 +39,7 @@
 
 		.top-right {
 			display: flex;
-			flex: 1 1;
+			flex: 1 1 0;
 			flex-direction: column;
 			justify-content: space-evenly;
 			width: 100%;
